# ytautocontrol

./: pyproject.toml  requirements.txt  restart.bat  run.bat  新建 文本文档.txt
ytautocontrol/: main.py
ytautocontrol/component/: base.py  nav.py
ytautocontrol/config/: socket.toml  sql.toml
ytautocontrol/statics/: scripts.xlsx
ytautocontrol/utils/: crud.py  socket_handler.py  ssh_handler.py
ytautocontrol/views/: accouts.py  creator.py  devices.py  runner.py
