[tool.poetry]
name = "ytautocontrol"
version = "0.1.0"
description = ""
authors = ["'1538379200' <1538379200@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nicegui = "^1.4.27"
psycopg2 = "^2.9.9"
toml = "^0.10.2"
loguru = "^0.7.2"
paramiko = "^3.4.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
